.archive/kubernetes/apps/kube-tools/kyverno/policies/ingress-annotations.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ingress-annotations
  annotations:
    policies.kyverno.io/title: Ingress annotations
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      This policy creates annotations on ingresses for external-dns
      and authentication based on custom annotations.
spec:
  mutateExistingOnPolicyUpdate: true
  generateExistingOnPolicyUpdate: true
  rules:
    - name: external-dns
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                external-dns.home.arpa/enabled: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(external-dns.alpha.kubernetes.io/target): ingress.${SECRET_DOMAIN}
    - name: auth
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                authentik.home.arpa/enabled: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(nginx.ingress.kubernetes.io/auth-response-headers): |-
                Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
              +(nginx.ingress.kubernetes.io/auth-signin): |-
                https://authentik.${SECRET_DOMAIN}/outpost.goauthentik.io/start?rd=$scheme://$http_host$request_uri
              +(nginx.ingress.kubernetes.io/auth-snippet): |-
                proxy_set_header X-Forwarded-Host $http_host;
              +(nginx.ingress.kubernetes.io/auth-url): |-
                http://ak-outpost-proxy-outpost.security.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
